# distributed-deep-learning-lib

./: .gitignore  CMakeLists.txt  README.md  cifar10_dataset.h  compile.sh  dist_deep_learning_lib.h  distributed_ops.h  distributed_training_utils.h  mpi_ops.h  nccl_ops.h  res.txt  resnet_example.cpp  resnet_example.py  resnet_model.h  resnet_torch_dist_example.cpp  serializer.h
scripts/: build_torch_with_mpi.sh  setup_venv.sh  verify_examples_cpu.sh
